Stable versions
---------------

4.3.11 ():
	Fix bugs caught in the OpenMPT test cases:
	- fix FT2 XM arpeggio clamp
	- fix FT2 XM arpeggio + pitch slide
	- fix XM tremor effect handling
	- fix XM tremor recover after volume setting
	- fix IT instrument after keyoff
	Other changes:
	- fix range of MMD effect 9 (reported by Lamar McLouth)
	- fix Visual C++ build (reported by Jochen Goernitz)
	- fix invalid sample offset handling in Skale Tracker XM (reported by
	  Vladislav Suschikh)
	- fix Protracker sample loop to use full repeat only if start is 0
	- fix lite build with IT support disabled
	- fix build with gcc 2.95 in Haiku

4.3.10 (20151231):
	Fix bugs reported by Coverity Scan:
	- fix out of bounds access in IT/XM/MDL/IMF envelopes
	- fix out of bounds read in STX effect decoding
	- fix RTM maximum sample name length
	- fix AC1D converter number of patterns underflow
	- fix PRU2 usage of uninitialized data
	- fix Vorbis depacker usage of uninitialized data
	- fix negative array index read when setting position
	- fix resource leak in MFP loader
	- fix resource leak in Chiptracker loader
	- fix resource leak in Startrekker loader
	- fix resource leak in module load error handling
	- fix event decoding in LIQ loader
	- fix JVS command parameter in MED synth
	- fix 669 effect decoding
	- fix memory violation in LZX decompressor
	- fix sanity check in PTM orders loading
	- add sanity check to smix sample loading
	- add sanity check to PP21 format converter
	- add sanity check to P40 and P61A format converters
	- add sanity check to Zen Packer format converter
	- add sanity check to TP3 format converter
	- add error handling to many decompressors
	- add error handling to many I/O operations
	- remove dead code from NO loader
	- remove dead code from Soundtracker loader
	- remove dead code from GMC format converter
	- remove dead code from LZX decompressor
	- remove dead code in virtual channel manager reset
	- remove unnecessary seeks in format loaders