@@ -8,6 +8,7 @@ Stable versions
 	- fix XM tremor effect handling
 	- fix XM tremor recover after volume setting
 	- fix IT instrument after keyoff
+	- fix MOD tone portamento target setting
 	Other changes:
 	- fix range of MMD effect 9 (reported by Lamar McLouth)
 	- fix Visual C++ build (reported by Jochen Goernitz)
